--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -51,16 +51,16 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <style>
+  <!-- <style>
      .item, img{
-        height: 70% !important;
-        width:  50% !important;
+        height: 70%;
+        width:  50%;
         border-radius: 25px;
         align-items: center;
     
     }
    
-  </style>
+  </style> -->
   
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -68,7 +68,7 @@
         <img src="./Image/1.png" alt="...">
       </center>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Mangemnet Roles Application</h5>
+        <h5 class="main" ><a href="https://portfolio-mohdyusufsaifi.onrender.com/Home">Mangemnet Roles Application</a></h5>
       </div>
     </div>
     <!-- <div class="carousel-item">
@@ -84,7 +84,7 @@
         <img src="./Image/inf.png" alt="...">
       </center>
       <div class="carousel-caption d-none d-md-block">
-        <h5>Int into Bit</h5>
+        <h5 class="main">Int into Bit</h5>
       </div>
     </div>
   </div>
@@ -97,4 +97,15 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-</html>
+<center><p class="main">My Project</p></center>
+<center><img src="./Image/1.png" class="Mannge"><h1 ><a href="https://toonworld4all.me/">Mangemnet Roles Application</a></h1></center><br>
+
+<center><h class="new">Hi! everyone</h></center> 
+<ul>
+<li class="new">This application is used for users to help add,edit,delete and update products list also that have admin panel.</br></li>
+<li class="new">The admin panel have authorization to see all users also do that such operations like add,edit,delete and update.</li>
+<li class="new"> second thing admin panel have authorization to see all users porducts list also do that such operations like add,edit,delete and update.</li>
+</ul>
+<center><h1 class="tex"> Mangement Roles Works Diagram</h1></center>
+<center><img src="./Image/Mangement Roles Works Diagram3.PNG" class="Mannge"></center>
+
