--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -1,27 +1,24 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <title>Azeem</title>
 <link rel="stylesheet" href="./style/style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- <nav class="navbar navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="Contact.html">Contact</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="Home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about">about</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Contact">contact</a>
-        </li>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false"><a href="Home" class="nav">Home</a></button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="true"><a href="about"class="nav">Profile</a></button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="true"><a href="Contact">Contact</a></button>
+  </li>
+</ul>
+</head>
+<body>
 <div class="container">
 <form action="/Contact" method="post" class="contact-form">
     <div class="mb-3">
@@ -41,7 +38,7 @@
       <label for="exampleFormControlTextarea1">Message</label>
       <textarea class="form-control" name="message" id="message" rows="3"></textarea>
     </div></br>
-    <button type="submit" class="btn btn-primary" id="submit" onClick=window.location.reload()>Submit</button>
+    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </form>
 </div>
@@ -73,4 +70,5 @@ $("#submit").click(function(){
     })
     // window.location.reload();
 </script>
-
+</body>
+</html>
