--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -1,49 +1,32 @@
-<nav class="navbar navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="Home">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about">about</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Contact">contact</a>
-        </li>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
   <title>Azeem</title>
+  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false"><a href="Home">Home</a></button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link  rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="true"><a href="about" class="nav">Profile</a></button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false"><a href="Contact" class="nav">Contact</a></button>
+    </li>
+  </ul>  
 </head>
-
-</body>
+<body>
 <style>
   body {
     background-image: url("./Image/Light.jpg");
     background-color: #cccccc;
+    background-size: cover ;
   }
 </style>
 <div class="container">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-</div>
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -51,17 +34,6 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <!-- <style>
-     .item, img{
-        height: 70%;
-        width:  50%;
-        border-radius: 25px;
-        align-items: center;
-    
-    }
-   
-  </style> -->
-  
   <div class="carousel-inner">
     <div class="carousel-item active">
       <center>
@@ -108,4 +80,9 @@
 </ul>
 <center><h1 class="tex"> Mangement Roles Works Diagram</h1></center>
 <center><img src="./Image/Mangement Roles Works Diagram3.PNG" class="Mannge"></center>
-
+<center><h1 class="tex"> Mangement Roles schema</h1></center>
+<center><img src="./Image/schema.PNG" class="Mannge"></center>
+<center><h1 class="tex">and Session ID</h1></center>
+<center><img src="./Image/2nd-Schema.png" class="schema-2"></center>
+</body>
+</html>
